fixup! Fix warning deprecate new URL in java 21